--- a/package.json
+++ b/package.json
@@ -6,17 +6,19 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon backend/server.js"
   },
-  "type":"module",
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@vitalets/google-translate-api": "^9.2.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^2.5.2",
     "mongoose": "^8.8.0"
   },
   "devDependencies": {
